# erg-vanity-gpu

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/erg-vanity-address/: Cargo.toml
crates/erg-vanity-address/src/: lib.rs  network.rs  p2pk.rs
crates/erg-vanity-bip/: Cargo.toml
crates/erg-vanity-bip/src/: bip32.rs  bip39.rs  bip44.rs  lib.rs
crates/erg-vanity-cli/: Cargo.toml
crates/erg-vanity-cli/src/: main.rs
crates/erg-vanity-core/: Cargo.toml
crates/erg-vanity-core/src/: error.rs  lib.rs  wordlist.rs  wordlist_data.rs
crates/erg-vanity-cpu/: Cargo.toml
crates/erg-vanity-cpu/src/: generator.rs  lib.rs  matcher.rs  parallel.rs
crates/erg-vanity-cpu/tests/: ergo_lib_validation.rs
crates/erg-vanity-crypto/: Cargo.toml
crates/erg-vanity-crypto/src/: base58.rs  blake2b.rs  hmac.rs  lib.rs  pbkdf2.rs  sha256.rs  sha512.rs
crates/erg-vanity-crypto/src/secp256k1/: field.rs  mod.rs  point.rs  pubkey.rs  scalar.rs
crates/erg-vanity-gpu/: Cargo.toml
crates/erg-vanity-gpu/kernels/: base58.cl  base58_test.cl  bench.cl  bip32.cl  bip39.cl  blake2b.cl  blake2b_test.cl  hmac_sha512.cl  hmac_sha512_test.cl  pbkdf2.cl  pbkdf2_test.cl  secp256k1_fe.cl  secp256k1_fe_test.cl  secp256k1_point.cl  secp256k1_point_test.cl  secp256k1_scalar.cl  secp256k1_scalar_test.cl  sha256.cl  sha256_test.cl  sha512.cl  sha512_test.cl  smoke.cl  vanity.cl
crates/erg-vanity-gpu/src/: bench.rs  buffers.rs  context.rs  hits.rs  kernel.rs  lib.rs  pipeline.rs  wordlist.rs
docs/: architecture.md  benchmarking.md  cli-reference.md  development.md  glossary.md  gpu-implementation.md  limitations.md  output-format.md  security.md
