[package]
name = "erg-vanity-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types, traits, and BIP39 wordlist for erg-vanity"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
