[package]
name = "erg-vanity-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "GPU-accelerated vanity address generation via OpenCL"

[features]
default = []
# Include test kernels for integration tests / external test harnesses
test-kernels = []

[dependencies]
erg-vanity-core = { path = "../erg-vanity-core" }
erg-vanity-crypto = { path = "../erg-vanity-crypto" }
erg-vanity-bip = { path = "../erg-vanity-bip" }
erg-vanity-address = { path = "../erg-vanity-address" }
thiserror = { workspace = true }
ocl = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
erg-vanity-cpu = { path = "../erg-vanity-cpu" }
